fix: limpando arquivis